--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,13 +15,19 @@
   "author": "Eric McDaniel <eric.g.mcdaniel@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@javelin/core": "^1.0.0-alpha.5",
     "@javelin/ecs": "1.0.0-alpha.6",
     "@javelin/net": "1.0.0-alpha.6",
     "@types/live-server": "^1.2.0",
     "@types/minimist": "^1.2.1",
     "babylonjs": "^4.2.0",
+    "contro": "^2.2.0",
     "javelin-fps-shared": "workspace:^0.0.1",
     "live-server": "^1.2.1",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "three": "^0.129.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.129.1"
   }
 }
