--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,6 +13,7 @@
   "author": "Eric McDaniel <eric.g.mcdaniel@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@a-type/rapier3d-node": "^0.5.3-rc.2",
     "@javelin/core": "1.0.0-alpha.5",
     "@javelin/ecs": "1.0.0-alpha.6",
     "@javelin/pack": "^1.0.0-alpha.5"
