--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,7 @@
   "author": "Eric McDaniel <eric.g.mcdaniel@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@a-type/rapier3d-node": "^0.5.3-rc.2",
+    "@a-type/rapier3d-node": "link:/Users/eric/Projects/rapier3d-node/",
     "@javelin/ecs": "1.0.0-alpha.7",
     "@javelin/hrtime-loop": "1.0.0-alpha.3",
     "@javelin/net": "1.0.0-alpha.7",
