--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "esbuild": "^0.12.6",
-    "esbuild-register": "^2.5.0"
+    "esbuild-register": "^2.5.0",
+    "npm-run-all": "^4.1.5"
   },
   "workspaces": [
     "packages/*"
