--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,8 +8,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
-    "watch": "npm run start",
-    "start": "npm run build && node --experimental-specifier-resolution=node dist/index.js",
+    "watch": "run-s build start",
+    "start": "node --experimental-specifier-resolution=node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "find ./node_modules/@a-type/rapier3d-node/dist -name \"*.ts\" -type f -delete"
   },
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@a-type/rapier3d-node": "^0.6.0",
+    "@dimforge/rapier3d": "^0.6.0",
     "@javelin/ecs": "1.0.0-alpha.7",
     "@javelin/hrtime-loop": "1.0.0-alpha.3",
     "@javelin/net": "1.0.0-alpha.7",
