--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@a-type/rapier3d-node": "^0.5.3-rc.2",
+    "@dimforge/rapier3d": "^0.6.0",
     "@javelin/core": "^1.0.0-alpha.8",
     "@javelin/ecs": "^1.0.0-alpha.8",
     "@javelin/pack": "^1.0.0-alpha.8"
